# ocr

./: .gitignore  AGENTS.md  ARCH_LINUX_SETUP.md  Cargo.toml  EDITORIAL_REDESIGN.md  OCR_COMPARISON.md  OCR_SETUP.md  PYTHON_312_ARCH.md  README.md  index.html  install-ocr-deps.bat  install-ocr-deps.sh  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: README.ru.md
e2e/: 11-pipeline-text-edit-and-block-draft.spec.ts
e2e/helpers/: pipeline.ts  selectors.ts
koharu/: Cargo.toml
koharu-ml/: Cargo.toml
koharu-ml/src/: facade.rs  lib.rs  loading.rs
koharu-pipeline/: Cargo.toml
koharu-pipeline/src/: lib.rs  pipeline.rs  state_tx.rs
koharu-psd/src/: export.rs
koharu-psd/tests/: export.rs
koharu-renderer/src/: facade.rs
koharu-rpc/: Cargo.toml
koharu-rpc/src/: api.rs  events.rs  lib.rs  server.rs
koharu-runtime/: Cargo.toml
koharu-runtime/src/: archive.rs  cuda.rs  llama.rs  loader.rs
koharu-types/src/: commands.rs  events.rs  image.rs  lib.rs  protocol.rs  views.rs
koharu/src/: app.rs  assets.rs  lib.rs  main.rs  windows.rs
scripts/: QUICK_START.md  README.md  SCRIPTS_GUIDE.md  build-and-run.ps1  build-and-run.sh  diagnose.sh
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/commands/: fs.rs  mod.rs  ocr.rs
src-tauri/src/ocr/: engine.rs  manga_ocr.rs  mod.rs  ortheus.rs  theseus.rs
src-tauri/src/utils/: image.rs
src/components/: ImageCanvas.tsx  ImageUploader.tsx  OCRControls.tsx  ResultsPanel.tsx  SettingsPanel.tsx  ToastProvider.tsx
src/hooks/: useKeyboardShortcuts.ts  useOCR.ts  useTauriIPC.ts
src/lib/: constants.ts  types.ts
src/state/: store.ts
ui/: eslint.config.js  next.config.ts  package.json  tsconfig.json  types.d.ts  vitest.config.ts
ui/app/: globals.css  layout.tsx  providers.tsx
ui/components/: ActivityBubble.tsx  AppErrorBoundary.tsx  Image.tsx  KeyboardShortcuts.tsx  MenuBar.tsx  Navigator.tsx  (+1 more)
(+72 files in other folders)
