[package]
name = "koharu"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
koharu-ml = { workspace = true }
koharu-pipeline = { workspace = true }
koharu-renderer = { workspace = true }
koharu-rpc = { workspace = true }
koharu-runtime = { workspace = true }
koharu-types = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
git-version = { workspace = true }
once_cell = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true }

[features]
default = ["cuda"]
cuda = ["koharu-ml/cuda"]
metal = ["koharu-ml/metal"]
